# pen-drive

./: .env.minio  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml
.beads/: events.jsonl
.doc-manager-cli/: config.toml
backend/: .env.example  go.mod  go.sum
docs/: 2026-03-12-20-01-18-plan.md  2026-03-13-01-27-14-issues-4-5-6-plan.md  2026-03-13-07-44-36-high-level-openapi-dto-flow.md  test.md
docs/plans/: 2026-03-13-frontend-migration.md
docs/reflections/: 2026-03-12-issue-1-planning-reflection.md
docs/running-knowledge/: 2026-03-13-09-55-00-upload-panel-folder-preview-strictmode.md
docs/work/: 2026-03-12-20-36-33-phase-plan.md  2026-03-12-20-41-07-implementation-backend.md  2026-03-12-21-19-58-implementation-frontend.md  2026-03-12-23-29-56-issue-filename-sanitization-plan.md  2026-03-13-01-00-27-secure-refresh-token-cookies.md  2026-03-13-06-30-00-auth-context-refactor-plan.md  2026-03-13-07-09-26-updated-auth-plan.md  ISSUE-1-PLAN.md  (+11 more)
frontend/: .env.example  .pre-commit-config.yaml  eslint.config.js  openapi-ts.config.ts  orval.config.ts  package-lock.json  package.json  vite.config.ts
rust-cli-for-frontend-rules/frontend-rules-detector/: .gitignore  Cargo.toml  README.md
rust-cli-for-frontend-rules/frontend-rules-detector/docs/prompts/: manual-rule-exploration.md
rust-cli-for-frontend-rules/frontend-rules-detector/docs/work/: 001-plan.md
rust-cli-for-frontend-rules/frontend-rules-detector/src/: main.rs
rust-cli-for-frontend-rules/frontend-rules-detector/tests/fixtures/: must-catch-conditional-render.tsx
(+44 files in other folders)
